--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -10,7 +10,7 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Émissions</a>
+          <%= link_to t('admin.nav.shows'), admin_emissions_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Balados</a>
