--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "admin" %>
-    <%= javascript_include_tag "admin" %>
+    <%= javascript_importmap_tags 'admin' %>
   </head>
 
   <body>
