--- a/app/views/lecteurs/show.html.erb
+++ b/app/views/lecteurs/show.html.erb
@@ -1,4 +1,4 @@
-<div class="lecteur" data-controller="lecteur">
+<div class="lecteur mt-3" data-controller="lecteur">
   <audio controls="">
     <source src="https://ecoutez.ckiafm.org:8001/live.mp3" type="audio/mp3">
   </audio>
