--- a/app/views/admin/emissions/show.html.erb
+++ b/app/views/admin/emissions/show.html.erb
@@ -1,1 +1,9 @@
 <h1><%= emission.nom %></h1>
+
+<h2><%= t 'admin.diffusion.title' %></h2>
+
+<% emission.diffusions.each do |diffusion| %>
+  <p><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %> : <%= diffusion.jours_diffusion %></p>
+<% end %>
+
+<%= link_to t('admin.emissions.create_diffusion_btn'), new_admin_emission_diffusion_path(emission), class: 'btn btn-primary' %>
