--- a/app/views/admin/shared/_form_actions.html.erb
+++ b/app/views/admin/shared/_form_actions.html.erb
@@ -1,4 +1,4 @@
 <div class="mt-3">
-  <%= link_to t('admin.shared.form_action.back_btn'), return_path, class: 'btn btn-light' %>
-  <%= form.submit submit_btn_label, class: 'btn btn-primary' %>
+  <%= link_to t('admin.shared.form_action.back_btn'), cancel_path, class: 'btn btn-light' %>
+  <%= button_tag button_label, class: 'btn btn-primary' %>
 </div>
