--- a/app/views/admin/diffusions/_form.html.erb
+++ b/app/views/admin/diffusions/_form.html.erb
@@ -1,6 +1,13 @@
 <h2><%= t('admin.diffusion.form.title') %></h2>
-<%= form_with model: [:admin, emission, diffusion], local: true do |form| %>
+<%= form_with model: [:admin, emission, diffusion], local: true, data: { controller: "admin--diffusion-form" } do |form| %>
   <%= form.hidden_field :emission_id, value: emission.id %>
+
+  <div class="row">
+    <div class="col-lg">
+      <%= form.label :type_diffusion, t('admin.diffusion.form.type_diffusion_label'), class: 'form-label' %>
+      <%= form.select :type_diffusion, Diffusion::TYPE_DIFFUSION.map { |type| [type.to_s.titleize, type] }, {}, { class: 'form-select', data: { action: "change->admin--diffusion-form#updateDaysSelectorAvailability", "admin--diffusion-form-target" => "diffusionType" } } %>
+    </div>
+  </div>
   <div class="row">
     <div class="col-lg">
       <%= form.label :temps_debut, t('admin.diffusion.form.temps_debut_label'), class: 'form-label' %>
@@ -20,7 +27,7 @@
     <h3><%= t('admin.diffusion.form.jour_diffusion_header') %></h3>
       <% %w[lundi mardi mercredi jeudi vendredi samedi dimanche].each do |jour| %>
         <div class="form-check form-check mb-3">
-          <%= form.check_box "diffuse_#{jour}", class: 'form-check-input' %>
+          <%= form.check_box "diffuse_#{jour}", { class: 'form-check-input', data: { "admin--diffusion-form-target" => "daySelector" } } %>
           <%= form.label "diffuse_#{jour}", t("admin.diffusion.form.diffuse_#{jour}_label"), class: 'form-check-label' %>
         </div>
       <% end %>
