--- a/app/views/admin/emissions/_diffusion.html.erb
+++ b/app/views/admin/emissions/_diffusion.html.erb
@@ -1,8 +1,11 @@
 <div class="card mt-3 mb-3">
   <div class="card-body">
-    <%# TODO: use translated string here #%>
-    <h5 class="card-title"><%= "(R) - " if diffusion.rediffusion %><%= diffusion.type.titleize %></h5>
-    <p><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %></p>
-    <p><%= diffusion.jours_diffusion_formate %></p>
+    <div class="d-flex flex-row justify-content-between">
+      <%# TODO: use translated string here #%>
+      <h5 class="card-title d-inline-block"><%= "(R) - " if diffusion.rediffusion %><%= diffusion.type.titleize %></h5>
+      <p class="d-inline-block float-end"><%= link_to bootstrap_icon(:trash), admin_emission_diffusion_path(diffusion.emission, diffusion), data: { turbo_method: :delete, turbo_confirm: t('admin.diffusion.delete_confirmation') } %></p>
+    </div>
+    <p class="card-text"><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %><br/>
+    <%= diffusion.jours_diffusion_formate %></p>
   </div>
 </div>
