--- a/app/views/admin/diffusions/new.html.erb
+++ b/app/views/admin/diffusions/new.html.erb
@@ -1,1 +1,1 @@
-<%= render 'admin/diffusions/form', {diffusion: diffusion, emission: emission} %>
+<%= render 'admin/diffusions/form', {diffusion: diffusion, emission: emission, button_label: t('admin.emissions.create_diffusion_btn')} %>
