Only use "Soumettre" as form label for now

--- a/app/views/admin/diffusions/edit.html.erb
+++ b/app/views/admin/diffusions/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'admin/diffusions/form', {diffusion: diffusion, emission: emission, button_label: t('admin.emissions.update_diffusion_btn')} %>
+<%= render 'admin/diffusions/form', {diffusion: diffusion, emission: emission} %>
