--- a/app/views/admin/diffusions/_form.html.erb
+++ b/app/views/admin/diffusions/_form.html.erb
@@ -41,5 +41,5 @@
       </div>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions',  cancel_path: admin_emission_path(emission), button_label: button_label %>
+  <%= render 'admin/shared/form_actions',  cancel_path: admin_emission_path(emission), button_label: t('admin.form.soumettre') %>
 <% end %>
