--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -21,8 +21,10 @@
       <%= form.select(:status, Emission.statuses.keys.map {|status| [status.titleize, status]}, {}, class: 'form-select') %>
     </div>
   </div>
-  <div class="mt-3">
-    <%= form.submit t('admin.form.soumettre'), class: 'btn btn-primary'%>
-    <%= link_to t('admin.form.retour'), admin_emissions_path, class: 'btn btn-light' %>
+  <div class="col mt-3">
+    <div class="col-lg-3">
+      <%= form.submit t('admin.shared.form_action.save_btn'), class: 'btn btn-primary'%>
+      <%= link_to t('admin.shared.form_action.back_btn'), admin_emissions_path, class: 'btn btn-light' %>
+    </div>
   </div>
 <% end %>
