--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -1,28 +1,31 @@
 <% if signed_in? %>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">CKIA - Admin</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-        </li>
-        <li class="nav-item">
-          <%= link_to t('admin.nav.shows'), admin_emissions_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Balados</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Utilisateurs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Équipe</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">CKIA - Admin</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+          </li>
+          <li class="nav-item">
+            <%= link_to t('admin.nav.shows'), admin_emissions_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Balados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Utilisateurs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Équipe</a>
+          </li>
+          <li class="nav-item">
+            <%= link_to t('admin.nav.ads'), admin_publicites_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 <% end %>
