Ajout des roles pour un utilisateur

--- a/app/views/admin/emissions/show.html.erb
+++ b/app/views/admin/emissions/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= emission.nom %></h1>
+<%= render 'admin/shared/page_header', titre: emission.nom %>
 
 <h2><%= t 'admin.diffusions.title' %></h2>
 
