--- a/app/views/admin/publicites/index.html.erb
+++ b/app/views/admin/publicites/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Les publicités</h1>
+<%= render 'admin/shared/page_header', titre: 'Les publicités' %>
 
 <% publicites.each do |pub| %>
   <div class="card mt-3 mb-3">
