--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<% if signed_in? %>
+<% if Current.user.signed_in? %>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">CKIA - Admin</a>
