--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, emission], local: true do |form| %>
+<%= form_with model: [:admin, emission, media], local: true, data: {controller: "admin--emissions-form"} do |form| %>
   <div class="row mb-3">
     <div class="col-lg">
       <%= form.label :nom, class: 'form-label' %>
@@ -18,12 +18,35 @@
     </div>
     <div class="col-lg">
       <%= form.label :status, class: 'form-label' %>
-      <%= form.select(:status, Emission.statuses.keys.map {|status| [status.titleize, status]}, {}, class: 'form-select') %>
+      <%= form.select(:status, Emission.statuses.keys.map { |status| [status.titleize, status] }, {}, class: 'form-select') %>
     </div>
   </div>
   <div class="col mt-3">
+    <div class="row">
+      <div class="col-lg">
+        <%= form.label "Quelle plateforme désirez-vous insérer" %>
+        <%#= form.select , %w[facebook tiktok instagram] %>
+      </div>
+      <div class="row">
+        <div class="col-lg">
+          <%= form.label "url" %>
+          <%#= form.text_field  %>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col--lg-3">
+      </div>
+    </div>
+
+    <div>
+      <p id="test">hello i am a test of js.</p>
+    </div>
+
+  </div>
+  <div class="col mt-3">
     <div class="col-lg-3">
-      <%= form.submit t('admin.shared.form_action.save_btn'), class: 'btn btn-primary'%>
+      <%= form.submit t('admin.shared.form_action.save_btn'), class: 'btn btn-primary' %>
       <%= link_to t('admin.shared.form_action.back_btn'), admin_emissions_path, class: 'btn btn-light' %>
     </div>
   </div>
