--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -25,6 +25,14 @@
             <%= link_to t('admin.nav.ads'), admin_publicites_path, class: 'nav-link' %>
           </li>
         </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdownLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= Current.user.email %></a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarUserDropdownLink">
+              <li><%= link_to "#{t('auth.signin_button_text')} #{bootstrap_icon('door-open')}".html_safe, session_path, data: {turbo_method: :delete }, class: 'nav-link' %></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
