--- a/app/views/lecteurs/show.html.erb
+++ b/app/views/lecteurs/show.html.erb
@@ -1,5 +1,11 @@
 <div class="lecteur mt-3" data-controller="lecteur">
+  <h3 id="afficheInformations">vous ecoutez</h3>
+
   <audio controls="">
     <source src="https://ecoutez.ckiafm.org:8001/live.mp3" type="audio/mp3">
   </audio>
+
+  <button id="changerPage" class=" btn btn-primary">
+    Ouvrir dans une nouvelle page
+  </button>
 </div>
