Add the development mode banner

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'shared/development_mode_banner' %>
     <%= render 'admin/shared/nav' %>
     <div class="aler alert-danger" role="alert">
       <p><%=notice%></p>
