--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, emission, media], local: true, data: {controller: "admin--emissions-form"} do |form| %>
+<%= form_with model: [:admin, emission], local: true, data: {controller: "admin--emissions-form"} do |form| %>
   <div class="row mb-3">
     <div class="col-lg">
       <%= form.label :nom, class: 'form-label' %>
@@ -25,12 +25,12 @@
     <div class="row">
       <div class="col-lg">
         <%= form.label "Quelle plateforme désirez-vous insérer" %>
-        <%#= form.select , %w[facebook tiktok instagram] %>
+        <%= form.select :plateform , %w[facebook tiktok instagram], class: 'form-select'%>
       </div>
       <div class="row">
         <div class="col-lg">
           <%= form.label "url" %>
-          <%#= form.text_field  %>
+          <%= form.text_field :url %> 
         </div>
       </div>
     </div>
