--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,30 +12,8 @@
 
   <body>
     <%= render 'shared/development_mode_banner' %>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">CKIA</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Programmation</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Balados</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">À Propos</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <main class="container">
+    <%= render 'shared/nav' %>
+    <main class="container mt-3">
       <%= yield %>
     </main>
   </body>
