--- a/app/views/admin/publicites/index.html.erb
+++ b/app/views/admin/publicites/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/page_header', titre: 'Les publicités' %>
 
-<% publicites.each do |pub| %>
+<% @publicites.each do |pub| %>
   <div class="card mt-3 mb-3">
     <div class="card-body">
         <p class="float-end">
