--- a/app/views/admin/categorie_emissions/index.html.erb
+++ b/app/views/admin/categorie_emissions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Catégories actives</h1>
 <%= link_to t('Ajouter une nouvelle catégorie'), new_admin_categorie_emission_path, class: "btn btn-primary" %>
-<% categorie.each do |categorie| %>
+<% @categories.each do |categorie| %>
   <div class="card">
     <div class="card-body" style="background-color: <%= categorie.couleur %>">
       <p class="float-end">
