--- a/app/views/admin/emissions/index.html.erb
+++ b/app/views/admin/emissions/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to t('admin.emissions.create_emission_btn'), new_admin_emission_path, class: 'btn btn-primary mb-3' %>
-<% emissions.each do |emission| %>
+<% @emissions.each do |emission| %>
   <div class="card">
     <div class="card-body">
       <h5 class="card-title"><%= link_to emission.nom, [:admin, emission] %></h5>
