--- a/app/views/admin/publicites/edit.html.erb
+++ b/app/views/admin/publicites/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Enregistrer une nouvelle publicite</h1>
 
-<%= render 'admin/publicites/form', pub: pub %>
+<%= render 'admin/publicites/form', pub: @pub %>
