--- a/app/views/lecteurs/show.html.erb
+++ b/app/views/lecteurs/show.html.erb
@@ -2,7 +2,7 @@
   <h3 id="afficheInformations">vous ecoutez</h3>
 
   <audio controls="">
-    <source src="https://ecoutez.ckiafm.org:8001/live.mp3" type="audio/mp3">
+    <source src="https://stream2.statsradio.com/8148/stream?fbclid=IwAR15SLH6G3Cz00zpfp-eH7gVRJ9BUaE6GY5uix610D9Moq9_0o_90zCEQuc" type="audio/mp3">
   </audio>
 
   <button id="changerPage" class=" btn btn-primary">
