Fixer le form de CategorieEmission

--- a/app/views/admin/categorie_emissions/_form.html.erb
+++ b/app/views/admin/categorie_emissions/_form.html.erb
@@ -1,5 +1,5 @@
-  <h1>Enregistrer une nouvelle catégorie d'émission</h1>
-<%= form_with model: [:admin, categories], local: true do |form| %>
+<h1>Enregistrer une nouvelle catégorie d'émission</h1>
+<%= form_with model: [:admin, categorie], local: true do |form| %>
   <div class="row mb-3">
     <div class="col-lg">
       <%= form.label "nom de la catégorie : ", class: "form-label" %>
