--- a/app/views/admin/categorie_emissions/new.html.erb
+++ b/app/views/admin/categorie_emissions/new.html.erb
@@ -1,1 +1,1 @@
-<%= render 'admin/categorie_emissions/form', categories: @categories%>
+<%= render 'admin/categorie_emissions/form', categorie: @categorie%>
