--- a/app/views/admin/publicites/_form.html.erb
+++ b/app/views/admin/publicites/_form.html.erb
@@ -32,11 +32,5 @@
       <%= form.file_field :image, class: "form-control" %>
     </div>
   </div>
-
-  <div class="row mt-3">
-    <div class="col--lg-3">
-      <%= form.submit t('admin.shared.form_action.save_btn'), class: 'btn btn-primary' %>
-      <%= link_to t('admin.shared.form_action.back_btn'), admin_publicites_path, class: 'btn btn-light' %>
-    </div>
-  </div>
+  <%= render 'admin/shared/form_actions', cancel_path: admin_publicites_path, button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
