--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -1,38 +1,30 @@
 <%= form_with model: [:admin, emission], local: true do |form| %>
-
   <div class="row mb-3">
     <div class="col-lg">
-      <%= form.label :nom, class: 'form-label' %>
+      <%= form.label :nom, t('admin.emissions.form.nom'), class: 'form-label' %>
       <%= form.text_field :nom, class: 'form-control' %>
     </div>
   </div>
   <div class="row mb-3">
     <div class="col-lg">
-      <%= form.label :description, class: 'form-label' %>
+      <%= form.label :description, t('admin.emissions.form.description'), class: 'form-label' %>
       <%= form.text_area :description, class: 'form-control' %>
     </div>
   </div>
   <div class="row mb-3">
     <div class="col-lg">
-      <%= form.label :email, class: 'form-label' %>
+      <%= form.label :email, t('admin.emissions.form.email'), class: 'form-label' %>
       <%= form.email_field :email, class: 'form-control' %>
     </div>
     <div class="col-lg">
-      <%= form.label :status, class: 'form-label' %>
+      <%= form.label :status, t('admin.emissions.form.status'), class: 'form-label' %>
       <%= form.select(:status, Emission.statuses.keys.map {|status| [status.titleize, status]}, {}, class: 'form-select') %>
     </div>
-
-    <div>
-      <%= form.label "veuillez choisir la categorie d'emissions : ", class: 'form-label' %>
-      <%= form.select :categorie_emission_id, CategorieEmission.all.map { |categorie| [categorie.nom, categorie.id] }, class: 'form-select'%>
-    </div>
-
-
   </div>
-  <div class="col mt-3">
-    <div class="col-lg-3">
-      <%= form.submit t('admin.shared.form_action.save_btn'), class: 'btn btn-primary'%>
-      <%= link_to t('admin.shared.form_action.back_btn'), admin_emissions_path, class: 'btn btn-light' %>
+  <div class="row-mb-3">
+    <div class="col-lg">
+      <%= form.label :categorie_emission_id, t('admin.emissions.form.categorie'), class: 'form-label' %>
+      <%= form.select :categorie_emission_id, CategorieEmission.all.map { |categorie| [categorie.nom, categorie.id] }, {}, class: 'form-select'%>
     </div>
   </div>
   <%= render 'admin/shared/form_actions',  cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
