--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render 'shared/development_mode_banner' %>
     <%= render 'admin/shared/nav' %>
-    <main class="container">
+    <main class="container mt-3">
       <%= render 'admin/shared/page_alerts' %>
       <%= yield %>
     </main>
