--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -18,14 +18,18 @@
     </div>
     <div class="col-lg">
       <%= form.label :status, t('admin.emissions.form.status'), class: 'form-label' %>
-      <%= form.select(:status, Emission.statuses.keys.map {|status| [status.titleize, status]}, {}, class: 'form-select') %>
+      <%= form.select(:status, Emission.statuses.keys.map { |status| [status.titleize, status] }, {}, class: 'form-select') %>
     </div>
   </div>
-  <div class="row-mb-3">
+  <div class="row mb-3">
     <div class="col-lg">
       <%= form.label :categorie_emission_id, t('admin.emissions.form.categorie'), class: 'form-label' %>
-      <%= form.select :categorie_emission_id, CategorieEmission.all.map { |categorie| [categorie.nom, categorie.id] }, {}, class: 'form-select'%>
+      <%= form.select :categorie_emission_id, CategorieEmission.all.map { |categorie| [categorie.nom, categorie.id] }, {}, class: 'form-select' %>
+    </div>
+    <div class="col-lg">
+      <%= form.label :utilisateur, t('admin.emissions.form.utilisateur'), class: 'form-label' %>
+      <%= form.select :utilisateurs, @utilisateurs.map { |user| [user.email, user.id] }, { :multiple => true }, class: 'form-control' %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions',  cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
