Ajout des tags pour les émissions

--- a/app/views/admin/emissions/index.html.erb
+++ b/app/views/admin/emissions/index.html.erb
@@ -10,6 +10,12 @@
         Émission <%= emission.status %><br/>
         <a href="mailto:<%= emission.email %>"><%= emission.email %></a>
       </p>
+      <p>
+        tags:
+        <% emission.tags.each  do |tags|  %>
+        <p><%= tags.nom %></p>
+        <% end %>
+          </p>
     </div>
   </div>
 <% end %>
