--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, emission], local: true do |form| %>
+<%= form_with model: [:admin, @emission], local: true do |form| %>
   <div class="row mb-3">
     <div class="col-lg">
       <%= form.label :nom, t('admin.emissions.form.nom'), class: 'form-label' %>
@@ -31,5 +31,12 @@
       <%= form.select :utilisateurs, @utilisateurs.map { |user| [user.email, user.id] }, { :multiple => true }, class: 'form-control' %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions', cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <div class="row-mb-3">
+    <div class="col-lg">
+      <%= form.label :tags, t('admin.emissions.form.tags')%>
+      <%= form.select :tags, @tags.map{|tag| [tag.nom, tag.id] }, {}, class:"form-select" %>
+    </div>
+
+  </div>
+  <%= render 'admin/shared/form_actions',  cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
