--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <%= link_to t('admin.nav.show_categories'), admin_categorie_emissions_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item">
+            <%= link_to t('admin.nav.tags'), admin_tags_path, class: 'nav-link' %>
+          </li>
           <%# <li class="nav-item"> %>
           <%#   <a class="nav-link" href="#">Balados</a> %>
           <%# </li> %>
