--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Programmation</a>
+          <%= link_to 'Programmation', programmation_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Balados</a>
