--- a/app/views/admin/emissions/index.html.erb
+++ b/app/views/admin/emissions/index.html.erb
@@ -5,7 +5,10 @@
 <% @emissions.each do |emission| %>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title"><%= link_to emission.nom, [:admin, emission] %></h5>
+      <div class="d-flex flex-row justify-content-between">
+        <h5 class="card-title"><%= link_to emission.nom, [:admin, emission] %></h5>
+        <span><%= link_to bootstrap_icon('pencil'), edit_admin_emission_path(emission) %></span>
+      </div>
       <p class="card-text">
         Émission <%= emission.status %><br/>
         <a href="mailto:<%= emission.email %>"><%= emission.email %></a>
