--- a/app/views/lecteurs/show.html.erb
+++ b/app/views/lecteurs/show.html.erb
@@ -1,5 +1,5 @@
 <div class="lecteur mt-3" data-controller="lecteur">
   <audio controls="">
-    <source src="https://ecoutez.ckiafm.org:8001/live.mp3" type="audio/mp3">
+    <source src="https://stream2.statsradio.com/8148/stream" type="audio/mp3">
   </audio>
 </div>
