--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -12,28 +12,30 @@
           <li class="nav-item">
             <%= link_to t('admin.nav.shows'), admin_emissions_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <%= link_to t('admin.nav.show_categories'), admin_categorie_emissions_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to t('admin.nav.tags'), admin_tags_path, class: 'nav-link' %>
-          </li>
-          <%# <li class="nav-item"> %>
-          <%#   <a class="nav-link" href="#">Balados</a> %>
-          <%# </li> %>
-          <%# <li class="nav-item"> %>
-          <%#   <a class="nav-link" href="#">Utilisateurs</a> %>
-          <%# </li> %>
-          <%# <li class="nav-item"> %>
-          <%#   <a class="nav-link" href="#">Équipe</a> %>
-          <%# </li> %>
-          <li class="nav-item">
-            <%= link_to t('admin.nav.ads'), admin_publicites_path, class: 'nav-link' %>
-          </li>
+          <% if Current.user.admin? %>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.show_categories'), admin_categorie_emissions_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.tags'), admin_tags_path, class: 'nav-link' %>
+            </li>
+            <%# <li class="nav-item"> %>
+              <%#   <a class="nav-link" href="#">Balados</a> %>
+              <%# </li> %>
+            <%# <li class="nav-item"> %>
+              <%#   <a class="nav-link" href="#">Utilisateurs</a> %>
+              <%# </li> %>
+            <%# <li class="nav-item"> %>
+              <%#   <a class="nav-link" href="#">Équipe</a> %>
+              <%# </li> %>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.ads'), admin_publicites_path, class: 'nav-link' %>
+            </li>
+          <% end %>
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdownLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= Current.user.email %></a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdownLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= Current.user.email %></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarUserDropdownLink">
               <li><%= link_to "#{t('auth.signout_button_text')} #{bootstrap_icon('door-open')}".html_safe, session_path, data: {turbo_method: :delete }, class: 'nav-link' %></li>
             </ul>
