--- a/app/views/admin/emissions/_diffusion.html.erb
+++ b/app/views/admin/emissions/_diffusion.html.erb
@@ -3,10 +3,12 @@
     <div class="d-flex flex-row justify-content-between">
       <%# TODO: use translated string here #%>
       <h5 class="card-title d-inline-block"><%= "(R) - " if diffusion.rediffusion %><%= diffusion.type.titleize %></h5>
-      <p class="d-inline-block float-end">
+      <% if Current.user.admin? %>
+        <p class="d-inline-block float-end">
         <%= link_to bootstrap_icon(:pencil), edit_admin_emission_diffusion_path(diffusion.emission, diffusion) %>
         <%= link_to bootstrap_icon(:trash), admin_emission_diffusion_path(diffusion.emission, diffusion), data: { turbo_method: :delete, turbo_confirm: t('admin.diffusions.delete_confirmation') } %>
-      </p>
+        </p>
+      <% end %>
     </div>
     <p class="card-text"><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %><br/>
     <%= diffusion.jours_diffusion_formate %></p>
