--- a/app/views/emissions/show.html.erb
+++ b/app/views/emissions/show.html.erb
@@ -4,7 +4,7 @@
 <% unless @emission.social_media_accounts.empty? %>
   <ul class="list-unstyled">
     <% @emission.social_media_accounts.each do |sma| %>
-      <li><%= link_to "#{bootstrap_icon(:facebook)} #{sma.platform}".html_safe, sma.url, class: 'social-media-account-link' %></li>
+      <li><%= link_to "#{bootstrap_icon(social_media_icon_name(sma))} #{social_media_platform_name(sma)}".html_safe, sma.url, class: 'social-media-account-link' %></li>
     <% end %>
   </ul>
 <% end %>
