--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -22,9 +22,9 @@
             <%# <li class="nav-item"> %>
               <%#   <a class="nav-link" href="#">Balados</a> %>
               <%# </li> %>
-            <%# <li class="nav-item"> %>
-              <%#   <a class="nav-link" href="#">Utilisateurs</a> %>
-              <%# </li> %>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.users'), admin_users_path, class: 'nav-link' %>
+            </li>
             <%# <li class="nav-item"> %>
               <%#   <a class="nav-link" href="#">Équipe</a> %>
               <%# </li> %>
