--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,21 +1,23 @@
-<%= form_with model: [:admin, user], local: true do |form| %>
-  <div class="row mb-3">
-    <div class="col-lg">
-      <%= form.label :email, t('admin.user.form.email_label'), class: "form-label" %>
-      <%= form.email_field :email, class: "form-control", placeholder: t('admin.user.form.email_placeholder') %>
+<%= form_with model: [:admin, @user], local: true do |form| %>
+  <div class="row">
+    <div class="col-lg-6">
+      <%= form.label :email %>
+      <%= form.email_field :email, class: 'form-control', autofocus: true %>
     </div>
-    <div class="col-lg">
-      <%= form.label :password, t('admin.user.form.password_label'), class: "form-label" %>
-      <%= form.password_field :password, class: "form-control", placeholder: t('admin.user.form.password_placeholder'), pattern: ".{24,}"%>
+    <div class="col-lg-6">
+      <%= form.label :role %>
+      <%= form.select(:role, User.roles.keys.map { |role| [role.titleize, role] }, {}, class: 'form-select') %>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg">
-      <%= form.label :role, t('admin.user.form.role_label'), class: "form-label"%>
-      <%= form.select :role,  @roles.map { |role| [t("admin.user.form.role_#{role}"), role] }, {}, class: "form-select" %>
+    <div class="col-lg-6">
+      <%= form.label :password %>
+      <%= form.password_field :password, class: 'form-control' %>
+    </div>
+    <div class="col-lg-6">
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation, class: 'form-control' %>
     </div>
   </div>
-  <div class="mt-3">
-    <%= form.submit t('admin.user.form.btn_user'), class: "btn btn-primary"%>
-  </div>
+  <%= render 'admin/shared/form_actions', cancel_path: admin_users_path, button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
