--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,3 +1,1 @@
-<%= render 'admin/shared/page_header', titre: t('admin.user.form.header') %>
-
-<%= render 'admin/users/form', user: @user %>
+<%= render 'admin/users/form', users: @users %>
