--- a/app/views/admin/categorie_emissions/_form.html.erb
+++ b/app/views/admin/categorie_emissions/_form.html.erb
@@ -1,7 +1,7 @@
 <h1>Enregistrer une nouvelle catégorie d'émission</h1>
 <%= form_with model: [:admin, categorie], local: true do |form| %>
-  <div class="row mb-3">
-    <div class="col-lg">
+  <div class="row">
+    <div class="col-lg-6">
       <%= form.label "nom de la catégorie : ", class: "form-label" %>
       <%= form.text_field :nom, class: 'form-control' %>
     </div>
