Add membership and associate member to a membership

--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -31,6 +31,12 @@
             <li class="nav-item">
               <%= link_to t('admin.nav.ads'), admin_publicites_path, class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.membres'), admin_membres_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.memberships'), admin_memberships_path, class: 'nav-link' %>
+            </li>
           <% end %>
         </ul>
         <ul class="navbar-nav ms-auto">
