--- a/app/views/admin/membres/_form.html.erb
+++ b/app/views/admin/membres/_form.html.erb
@@ -20,29 +20,33 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-lg-6">
       <%= form.label :adresse %>
       <%= form.text_field :adresse, class: 'form-control' %>
     </div>
-  </div>
-  <div class="row">
     <div class="col-lg-6">
       <%= form.label :ville %>
       <%= form.text_field :ville, class: 'form-control' %>
     </div>
+  </div>
+  <div class="row">
     <div class="col-lg-6">
       <%= form.label :code_postal %>
       <%= form.text_field :code_postal, class: 'form-control' %>
     </div>
-  </div>
-  <div class="row">
     <div class="col-lg-6">
       <%= form.label :province %>
       <%= form.text_field :province, class: 'form-control' %>
     </div>
+  </div>
+  <div class="row">
     <div class="col-lg-6">
       <%= form.label :pays %>
       <%= form.text_field :pays, class: 'form-control' %>
+    </div>
+    <div class="col-lg-6">
+      <%= form.label :membership_id %>
+      <%= form.select :membership_id, options_from_collection_for_select(memberships, :id, :nom, membre.membership_id), {}, class: 'form-select' %>
     </div>
   </div>
 
